<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4803DAA4"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="172dp"
        android:layout_height="164dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.714"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:inputType="textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/tv_age"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.837"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.875"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="@color/ic_launcher_background"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/already_a_user_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>