<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_post"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yash"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvRelativeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_min_ago"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/ivPost"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/this_is_a_sample_post" />

    </LinearLayout>
</androidx.cardview.widget.CardView>